# aquarius

./: Cargo.toml  README.md  flake.nix  justfile  run.sh  rust-toolchain.toml
crates/test-server/: Cargo.toml
crates/test-server/src/: lib.rs  main.rs
crates/test-subscriber/: Cargo.toml
crates/test-subscriber/src/: lib.rs
crates/test-timeout/: Cargo.toml
crates/test-timeout/src/: lib.rs
src/: charts.rs  cli.rs  lib.rs  main.rs  summary.rs  syndicate.rs  worker.rs
src/charts/: in_flight.rs  progress.rs  table.rs
src/summary/: in_flight.rs  progress.rs  snapshots.rs
src/syndicate/: builder.rs  gen.rs
src/worker/: connect.rs  tx.rs
tests/: can_send_many_requests.rs  can_send_one_request.rs
