[package]
authors     = ["katelyn martin <me+cratelyn@katelyn.world>"]
description = "a small http/2 server for testing aquarius"
edition     = "2021"
license     = "MIT"
name        = "aquarius-test-server"
publish     = false
repository  = "https://github.com/cratelyn/aquarius"
version     = "0.1.0"

[dependencies]
futures            = { workspace = true }
http               = { workspace = true }
hyper              = { workspace = true }
hyper-util         = { workspace = true }
tap                = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
url                = { workspace = true }
